bug fixes and performance enhancements

--- a/c_love.html
+++ b/c_love.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>We Love Css</title>
+    <title>Document</title>
 </head>
 <body>
-    
+    <h1>C Love</h1>
+    <p>CSS has changed my life for the worse, because I can't get enough of it, so I am eternally unsatisfied.</p>
 </body>
 </html>
