--- a/index.html
+++ b/index.html
@@ -7,6 +7,30 @@
     <title>We Love Css</title>
 </head>
 <body>
+    <header>
+        <h1>Welcome to "We Love CSS"!</h1>
+        <p>Discover more about our members and their experiences with CSS:</p>
+    </header>
+
+    <nav>
+        <ul>
+            <li><a href="/donate.html">Donate</a></li>
+        </ul>
+    </nav>
     
+    <main>
+        <h2>Our Members</h2>
+        <p>Click on a member's name to view their page:</p>
+        <ul>
+            <li><a href="/mo-ta-ali.html">Mohammed T Ali</a></li>
+            <li><a href="/nikki.html">Nikki</a></li>
+            <li><a href="/c_love.html">Caleb Love</a></li>
+            <!-- Add more members as needed -->
+        </ul>
+    </main>
+    
+    <footer>
+        <p>&copy; 2023 We Love CSS. All rights reserved.</p>
+    </footer>
 </body>
 </html>
