--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
         <h2>Our Members</h2>
         <p>Click on a member's name to view their page:</p>
         <ul>
-            <li><a href="/mo-ta-ali.html">Mohammed T Ali</a></li>
-            <li><a href="/nikki.html">Nikki</a></li>
-            <li><a href="/c_love.html">Caleb Love</a></li>
+            <li><a href="mo-ta-ali.html">Mohammed T Ali</a></li>
+            <li><a href="nikki.html">Nikki</a></li>
+            <li><a href="c_love.html">Caleb Love</a></li>
             <!-- Add more members as needed -->
         </ul>
     </main>
