--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1>Welcome to "We HATE CSS"!</h1>
+        <h1>Welcome to "We don't Love CSS"!</h1>
         <p>Discover more about our members and their experiences with CSS:</p>
     </header>
 
